[package]
name = "aev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
evtx = "0.8.0"
clap = { version = "4.0.26", features = ["derive"] }
tokio = "1.22.0"
datafusion = "14.0.0" 
rustyline = "10.0.0"